[AUTO-2][add] swagger documentation
