# internal/controllers/reauth.go
@@ -5,6 +5,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath		/api/users
+// @Summary		Обновление токена
+// @Description	login the user and returns tokens
+// @Param			Refresh	header	service.LoginInput	true	"Обновление токена"
+// @Tags			Users
+// @Accept			json
+// @Produce		json
+// @Success		200	{object} dto.ReauthResponse
+// @Router			/api/users/reauth [get]
 func (r *HttpHandler) Reauth(c *gin.Context) {
 	const op = "HttpHandler.Reauth"
 	log := logging.CreateLoggerWithOp(op)
@@ -12,14 +21,12 @@ func (r *HttpHandler) Reauth(c *gin.Context) {
 	log.Info("Поступил запрос на регенерацию токена")
 
 	refresh := c.GetString("refresh")
-	token, err := r.authService.Reauth(refresh)
+	tokenResponse, err := r.authService.Reauth(refresh)
 	if err != nil {
 		RespondWithError(c, 401, err.Error(), err)
 
 		return
 	}
 
-	c.JSON(200, struct {
-		Token string `json:"token"`
-	}{Token: token})
+	c.JSON(200, tokenResponse)
 }
