# internal/service/dto/products_dto.go
@@ -1,0 +1,7 @@
+package dto
+
+import "autoshop/internal/domain/models"
+
+type GetProductsDto struct {
+	Products []models.Product `json:"products"`
+}
